--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -16,6 +16,8 @@ jobs:
           fetch-depth: 0 # Необходим для полного анализа истории коммитов
       - name: Setup Node.js
         uses: actions/setup-node@v3
+        with:
+          node_version: "24.10"
       - name: Install dependencies
         run: npm ci
       - name: Semantic Release
