--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -17,7 +17,7 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v3
         with:
-          node_version: "24.10"
+          node-version: "24.10"
       - name: Install dependencies
         run: npm ci
       - name: Semantic Release
