--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -9,6 +9,10 @@ jobs:
   release:
     name: Release
     runs-on: ubuntu-latest
+    permissions: # <-- Добавьте эту секцию
+      contents: write # <-- Дает права на запись в репозиторий (коммиты, теги)
+      pull-requests: write # <-- Может понадобиться для некоторых плагинов (опционально)
+      id-token: write # <-- Для OIDC, если используете (опционально)
     steps:
       - name: Checkout
         uses: actions/checkout@v3
