--- a/package.json
+++ b/package.json
@@ -1,8 +1,19 @@
 {
+  "name": "your-package-name", // <--- ДОБАВЬТЕ ЭТУ СТРОКУ
+  "version": "1.0.0",
+  "description": "A brief description of your package",
+  "main": "index.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
   "devDependencies": {
     "@semantic-release/changelog": "^6.0.3",
     "@semantic-release/git": "^10.0.1",
-    "@semantic-release/npm": "^13.1.1",
-    "semantic-release": "^25.0.2"
+    "@semantic-release/npm": "^11.0.0",
+    "semantic-release": "^23.0.0"
   }
 }
+
