--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "your-package-name", // <--- ДОБАВЬТЕ ЭТУ СТРОКУ
+  "name": "your-package-name",
   "version": "1.0.0",
   "description": "A brief description of your package",
   "main": "index.js",
