--- a/.releaserc.json
+++ b/.releaserc.json
@@ -3,6 +3,7 @@
   "plugins": [
    [ "@semantic-release/commit-analyzer", {"preset": "angular",
         "releaseRules": [
+          { "breaking": true, "release": "major" },
           { "type": "docs", "scope": "README", "release": "patch" },
           { "type": "refactor", "release": "patch" },
           { "type": "style", "release": "patch" }
