--- a/.releaserc.json
+++ b/.releaserc.json
@@ -1,17 +1,7 @@
 {
   "branches": ["main", { "name": "beta", "prerelease": true }],
   "plugins": [
-   [ "@semantic-release/commit-analyzer", {"preset": "angular",
-        "releaseRules": [
-          { "breaking": true, "release": "major" },
-          { "type": "docs", "scope": "README", "release": "patch" },
-          { "type": "refactor", "release": "patch" },
-          { "type": "style", "release": "patch" }
-        ],
-        "parserOpts": {
-          "noteKeywords": ["BREAKING CHANGE", "BREAKING CHANGES"]
-        }
-	}],
+   [ "@semantic-release/commit-analyzer"],
     "@semantic-release/release-notes-generator",
     "@semantic-release/changelog",
     ["@semantic-release/git", {
